# OtsuThreasholding

./: CMakeLists.txt  OtsuThresholding.cxx
